# MatterVis

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
agents/: README.md  atom_groups_api.md  bond_groups_api.md  compass_api.md  config_api.md  cube_api.md  dash_service.md  ortep_api.md  polyhedron_api.md  scene_api.md  selection_api.md  transforms_api.md
api/: __init__.py  shared.py  v1_legacy.py  v2_export.py  v2_intent.py  v2_overlays.py  v2_perf.py  v2_scenes.py  ws.py
app/: __init__.py
crystal_viewer/: api.py  api_shared.py  api_v1_legacy.py  api_v2_export.py  api_v2_overlays.py  api_v2_perf.py  api_v2_scenes.py  api_v2_state.py  api_ws.py  app.py  app_camera_helpers.py  app_editor_tables.py  app_editor_transforms.py  app_factory.py  app_normalizers.py  app_rightclick.py  app_runtime.py  app_shared.py  app_style_helpers.py  atom_groups.py  bond_groups.py  bonds.py  cif_parse.py  cli.py  compass.py  cube.py  dash_app_impl.py  dash_callbacks_editors.py  dash_callbacks_figure.py  dash_callbacks_scene.py  dash_callbacks_state.py  dash_callbacks_view.py  dash_callbacks_viewers.py  dash_helpers.py  dash_layout.py  disorder.py  formula_unit.py  geometry.py  loader.py  molcrys_bridge.py  (+29 more)
docs/: README.md  build_images.py  cli.md  dev-notes.md  perf.md  postmortems.md  scores.md
frontend/: README.md
scripts/: 02_coordination_analysis.py  04_static_publication.py  05_app_and_api.py  06_cp2k_cube_orbital.py  README.md
tests/: _layout_helpers.py  conftest.py  test_disorder_isolated_atoms.py  test_module_organization.py  (+1 more)
(+334 files in other folders)
